# novel_outline_with_langgraph

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  frontend-ui-polish.skill  package.json  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: bm25.py  chunking.py  config.py  conflict_detector.py  crud.py  database.py  db_models.py  graph.py  graph_editor.py  graph_extractor.py  graph_retriever.py  index_sync.py  knowledge_graph.py  main.py  models.py  node_indexer.py  notifier.py  sync_strategy.py  text_utils.py  vectorstore.py  version_manager.py  version_storage.py  versioning.py  websocket_manager.py  world_knowledge.py
backend/app/prompts/: drafting_prompt.txt  entity_extraction_prompt.txt  reverse_sync_prompt.txt
backend/data/: stories.db
backend/data/chroma_db/: chroma.sqlite3
backend/scripts/: export_schema.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: character-graph.tsx  conflict-alert.tsx  create-dialog.tsx  knowledge-editor.tsx  knowledge-manager.tsx  knowledge-upload.tsx  knowledge-workspace.tsx  node-editor.tsx  project-list.tsx  story-visualizer.tsx  sync-indicator.tsx  version-diff.tsx  version-history.tsx
frontend/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  resizable.tsx  tabs.tsx  textarea.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/lib/: api.ts  use-debounce.ts  websocket.ts
frontend/src/stores/: project-store.ts
skills/frontend-ui-polish/: SKILL.md
(+3 files in other folders)
