[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langgraph = ">=0.2.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.32"
aiosqlite = "^0.21.0"
chromadb = "^0.6.3"
langchain-chroma = "^0.2.0"
sentence-transformers = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
